RESOLVED FIXED155600
AX: AXARIACurrent exposed but not displayed in Accessibility Inspector
https://bugs.webkit.org/show_bug.cgi?id=155600
Summary AX: AXARIACurrent exposed but not displayed in Accessibility Inspector
James Craig
Reported 2016-03-17 15:11:27 PDT
See bug 146012 for the @aria-current feature implementation, and search the source for AXLanguage and NSAccessibilityLanguageAttribute to see how a similar property would be exposed.
Attachments
patch (4.27 KB, patch)
2016-03-17 23:14 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2016-03-17 15:12:14 PDT
Nan Wang
Comment 2 2016-03-17 23:14:02 PDT
Created attachment 274377 [details] patch Can't believe we slipped through this.
WebKit Commit Bot
Comment 3 2016-03-18 10:48:19 PDT
Comment on attachment 274377 [details] patch Clearing flags on attachment: 274377 Committed r198427: <http://trac.webkit.org/changeset/198427>
WebKit Commit Bot
Comment 4 2016-03-18 10:48:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.