AX: AXARIACurrent exposed but not displayed in Accessibility Inspector https://bugs.webkit.org/show_bug.cgi?id=155600

Reviewed by Chris Fleizach.

Source/WebCore:

AXARIACurrent attribute was added to a temporary array that was never returned.

Test: accessibility/mac/aria-current-attribute-exposed.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests:

* accessibility/mac/aria-current-attribute-exposed-expected.txt: Added.
* accessibility/mac/aria-current-attribute-exposed.html: Added.


Canonical link: https://commits.webkit.org/173762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198427 268f45cc-cd09-0410-ab3c-d52691b4dbfc